# gltext

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
include/gltext/: Font.h  Text.h  gltext.h
src/: Exception.h  Font.cpp  FontImpl.cpp  FontImpl.h  FontPimpl.cpp  FontPimpl.h  Freetype.cpp  Freetype.h  Program.cpp  Program.h  Text.cpp  TextImpl.cpp  TextImpl.h  glload.cpp  glload.hpp  gltext.cpp
